--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     </main>
     
     <footer>
-        <a href="./index.html">webstudio</span></a>
+        <a href="./index.html">webstudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
