--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
         <nav>
 
-            <a href="./index.html">Web Studio</a>
+            <a href="./index.html">Web-Studio</a>
 
             <ul>
                 <li><a href="">Studio</a></li>
