--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="">
 
             <a class="link logotype" href="./index.html">
-                <span class="iris-logo">Web</span>Studio
+                Web<span class="logo">Studio</span>
             </a>
 
             <ul class="list page-nav">
