--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </a>
 
             <ul class="list page-nav">
-                <li><a class="link" href="">Studio</a></li>
+                <li><a class="link" href="./index.html">Studio</a></li>
                 <li><a class="link" href="">Portfolio</a></li>
                 <li><a class="link" href="">Contacts</a></li>
             </ul>
