--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         
         <nav>
 
-            <a href="./index.html">
-                Web<span>Studio</span>
+            <a class="main-logotype" href="./index.html">
+                Web<span class="logotype">Studio</span>
             </a>
 
             <ul class="list page-nav">
